...
                            fontSize: 18, fontWeight: FontWeight.bold),
                      ),
                      const SizedBox(height: 16),
                      TextFormField(
                        controller: _borrowerNameController,
                        decoration: const InputDecoration(
                          labelText: 'Borrower Name',
                          labelStyle:
                              TextStyle(color: Color.fromARGB(255, 51, 75, 71)),
                          border: OutlineInputBorder(
                            borderSide: BorderSide(
                                color: Color.fromARGB(255, 51, 75, 71)),
                          ),
...
              padding: const EdgeInsets.all(16.0),
              child: ElevatedButton(
                onPressed: _submitForm,
                style: ElevatedButton.styleFrom(
                  minimumSize: const Size.fromHeight(50),
                ),
                child: const Text('Create Lending'),
              ),
            ),
          ],
        ),
      ),
    );
...
